# ouka2-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  release_notes.md  vite.config.ts
.github/workflows/: release.yml
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/workspace/hsh/: index.md  journal-1.md
scripts/: download-ffmpeg.cjs  sync-version.cjs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: diagnostics.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  crawler.rs  custom.rs  logs.rs  mod.rs  server.rs
src-tauri/src/radio/: api.rs  bilibili.rs  crawler.rs  mod.rs  models.rs  sii.rs  stream.rs
src-tauri/src/utils/: ffmpeg.rs  mod.rs
src/components/: AudioPlayer.vue  CrawlProgress.vue  InstallQueuePanel.vue  InstallStationsDialog.vue  LogPanel.vue  StationCard.vue  StatusBar.vue
src/stores/: radio.ts
src/types/: index.ts
